Fix z-index of contact

--- a/components/Contact/Contact.module.scss
+++ b/components/Contact/Contact.module.scss
@@ -4,21 +4,24 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  height: 85vh;
-  transform: translate(-50%, -50%);
   background-color: white;
-  z-index: 100;
+  height: 85%;
+  width: 80%;
+  transform: translate(-50%, -50%);
   font-size: 1.6rem;
+  z-index: 10;
 }
 
 @include desktop {
   .contact {
     position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     top: 0;
     left: 0;
     transform: translate(0, 0);
     width: 100%;
-    height: 40rem;
-    z-index: 100;
+    height: 30rem;
   }
 }
