--- a/components/Products/Product.module.scss
+++ b/components/Products/Product.module.scss
@@ -7,7 +7,6 @@
   font-size: 1.6rem;
   justify-content: center;
   flex-direction: column;
-  align-items: center;
 }
 
 .summary {
